// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser: expression IntersectionType 1`] = `
Object {
  "kind": "IntersectionType",
  "types": Array [
    Object {
      "kind": "StringTypeLiteral",
      "value": "0",
    },
    Object {
      "kind": "StringTypeLiteral",
      "value": "1",
    },
  ],
}
`;

exports[`parser: expression IntersectionType 2`] = `
Object {
  "kind": "IntersectionType",
  "types": Array [
    Object {
      "kind": "StringTypeLiteral",
      "value": "0",
    },
    Object {
      "kind": "StringTypeLiteral",
      "value": "1",
    },
  ],
}
`;

exports[`parser: expression UnionType 1`] = `
Object {
  "kind": "UnionType",
  "types": Array [
    Object {
      "kind": "StringTypeLiteral",
      "value": "0",
    },
    Object {
      "kind": "StringTypeLiteral",
      "value": "1",
    },
  ],
}
`;

exports[`parser: expression UnionType 2`] = `
Object {
  "kind": "UnionType",
  "types": Array [
    Object {
      "kind": "StringTypeLiteral",
      "value": "0",
    },
    Object {
      "kind": "StringTypeLiteral",
      "value": "1",
    },
  ],
}
`;

exports[`parser: expression UnionType: special char 1`] = `
Object {
  "kind": "UnionType",
  "types": Array [
    Object {
      "kind": "StringTypeLiteral",
      "value": " ",
    },
    Object {
      "kind": "StringTypeLiteral",
      "value": "\\\\n",
    },
  ],
}
`;
